# final-nn

./: README.md  autoencoder.ipynb  classifier.ipynb  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
nn/: __init__.py  nn.py  preprocess.py
test/: test_nn.py
